# LLMtgbot

./: .gitignore  README.md
tgbot/: .env  pyproject.toml
tgbot/data/db/: app.sqlite
tgbot/docs/: req.md
tgbot/src/: main.py
tgbot/src/core/: config.py  lifespan.py  logger.py
tgbot/src/core/ModelGateway/: ai_http_client.py
tgbot/src/core/db/: migrations.py  pool.py
tgbot/src/data/db/: app.sqlite
tgbot/src/handlers/: __init__.py  add_models.py  menu.py  models.py  start.py  un_handled.py
tgbot/src/keyboards/: builder.py  callback.py  decoder.py
tgbot/src/repository/: base.py  llm.py  user.py
tgbot/src/schemes/: enums.py
tgbot/src/services/: model.py  user.py
tgbot/src/states/: ai.py
tgbot/src/tables/: __init__.py  base.py  integration_ai.py  telegram_users.py
tgbot/src/text/: builder.py
tgbot/src/utils/: case_converter.py
tgbot/src/utils/validators/: auth_data.py  url.py
