[project]
name = "tgbot"
version = "0.1.0"
description = "llm tg bot"
readme = "README.md"
requires-python = "==3.13.5"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiosqlite>=0.21.0",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
]

[tool.ruff]
src = ["src"]
include = ["src/**.py"]
target-version = "py313"
line-length = 105

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    "D", "EM101", "PLW1508",
    "TRY003"
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
