[project]
name = "tgbot"
version = "0.1.0"
description = "llm tg bot"
readme = "README.md"
requires-python = "==3.13.5"
dependencies = [
    "aiogram==3.20.0.post0",
    "aiosqlite==0.21.0",
    "dotenv==0.9.9",
    "orjson>=3.10.18",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]


[tool.ruff]
src = ["src"]
include = ["src/**.py"]
target-version = "py313"
line-length = 112

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    "D", "EM101", "PLW1508", "EM102",
    "TRY003", "TRY400", "G004", "BLE001",
    "S608", "FBT002", "FBT001", "PLR0913"
]
